# math0520lib

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  create-readme.sh
demo/: demo.cpp  main.cpp
math0520lib/: CMakeLists.txt
math0520lib/include/: mat.hpp
math0520lib/include/math0520lib/: mat.hpp  vec_operations.hpp
src/: main.cpp
